--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -7,11 +7,11 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon_labeled"
@@ -145,6 +145,10 @@
         <activity
             android:name="com.healthtimejournal.TiledEventsActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.healthtimejournal.RegisterPage3Activity"
+            android:label="@string/title_activity_register_page3" >
         </activity>
     </application>
 
