--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -150,6 +150,10 @@
             android:name="com.healthtimejournal.RegisterPage3Activity"
             android:label="@string/title_activity_register_page3" >
         </activity>
+        <activity
+            android:name="com.healthtimejournal.RegisterPartnerActivity"
+            android:label="@string/title_activity_register_partner" >
+        </activity>
     </application>
 
 </manifest>
