--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -158,6 +158,10 @@
             android:name="com.healthtimejournal.RegisterPartner2Activity"
             android:label="@string/title_activity_register_partner2" >
         </activity>
+        <activity
+            android:name="com.healthtimejournal.RegisterFamilyActivity"
+            android:label="@string/title_activity_register_family" >
+        </activity>
     </application>
 
 </manifest>
