--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -162,6 +162,15 @@
             android:name="com.healthtimejournal.RegisterFamilyActivity"
             android:label="@string/title_activity_register_family" >
         </activity>
+        <activity
+            android:name="com.healthtimejournal.TaskWithoutUIActivity"
+            android:label="@string/title_activity_task_without_ui" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
