added set parent photo, connected comment context

--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -126,7 +126,7 @@
         	android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.healthtimejournal.EditParentInfoActivity"
+            android:name="com.healthtimejournal.ParentProfilePhotoActivity"
             android:label="@string/app_name"
         	android:screenOrientation="portrait" >
         </activity>
