--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    
+
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -23,7 +23,7 @@
         <activity
             android:name="com.healthtimejournal.MainActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,158 +33,167 @@
         <activity
             android:name="com.healthtimejournal.RegisterPageActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPage2Activity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.AddChildActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MySharedAccountsActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.NewsFeedActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.PostActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.PostPageActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.ChildProfileActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.ParentProfileActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.PhotoViewerActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.WeightGraphActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.HeightGraphActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.HealthGrowthActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.LifeEventsActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.TimelineActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MyChildrenActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MySharedAccountActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MyFriendChildrenActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.EditChildInfoActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.EditParentInfoActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.AlbumActivity"
             android:label="@string/title_activity_album"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.CreateDoctorActivity"
             android:label="@string/title_activity_album"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.EditDoctorActivity"
             android:label="@string/title_activity_album"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.DoctorPageActivity"
             android:label="@string/title_activity_album"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.TiledEventsActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPage3Activity"
             android:label="@string/title_activity_register_page3"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPartnerActivity"
             android:label="@string/title_activity_register_partner"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.SharedAccountActivity"
-            android:label="@string/app_name" >
-		</activity>
-		<activity
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
             android:name="com.healthtimejournal.RegisterPartner2Activity"
-            android:label="@string/title_activity_register_partner2" >
+            android:label="@string/title_activity_register_partner2"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterFamilyActivity"
-            android:label="@string/title_activity_register_family" >
+            android:label="@string/title_activity_register_family" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.healthtimejournal.TaskWithoutUIActivity"
-            android:label="@string/title_activity_task_without_ui" >
+            android:label="@string/title_activity_task_without_ui"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.healthtimejournal.ProfileChildAccountActivity"
+            android:label="@string/title_activity_profile_child" 
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
