--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -106,6 +106,11 @@
         	android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="com.healthtimejournal.SearchBarActivity"
+            android:label="@string/app_name"
+        	android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.healthtimejournal.MyChildrenActivity"
             android:label="@string/app_name"
         	android:screenOrientation="portrait" >
