--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -32,32 +33,32 @@
         <activity
             android:name="com.healthtimejournal.RegisterPageActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPage2Activity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.AddChildActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MySharedAccountsActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.NewsFeedActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.PostActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.PostPageActivity"
@@ -67,72 +68,72 @@
         <activity
             android:name="com.healthtimejournal.ChildProfileActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.ParentProfileActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.PhotoViewerActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.WeightGraphActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.HeightGraphActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.HealthGrowthActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.LifeEventsActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.TimelineActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.SearchBarActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MyChildrenActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MySharedAccountActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.MyFriendChildrenActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.EditChildInfoActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.ParentProfilePhotoActivity"
             android:label="@string/app_name"
-        	android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.EditParentInfoActivity"
@@ -142,32 +143,32 @@
         <activity
             android:name="com.healthtimejournal.AlbumActivity"
             android:label="@string/title_activity_album"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.CreateDoctorActivity"
             android:label="@string/title_activity_album"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.EditDoctorActivity"
             android:label="@string/title_activity_album"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.DoctorPageActivity"
             android:label="@string/title_activity_album"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.TiledEventsActivity"
             android:label="@string/app_name"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPage3Activity"
             android:label="@string/title_activity_register_page3"
-			android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPartnerActivity"
@@ -176,8 +177,8 @@
         </activity>
         <activity
             android:name="com.healthtimejournal.SharedAccountActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterPartner2Activity"
@@ -186,8 +187,8 @@
         </activity>
         <activity
             android:name="com.healthtimejournal.RegisterFamilyActivity"
-            android:label="@string/title_activity_register_family" 
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_register_family"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.TaskWithoutUIActivity"
@@ -201,8 +202,12 @@
         </activity>
         <activity
             android:name="com.healthtimejournal.ProfileChildAccountActivity"
-            android:label="@string/title_activity_profile_child" 
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_profile_child"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.healthtimejournal.ProfileParentActivity"
+            android:label="@string/title_activity_profile_parent" >
         </activity>
     </application>
 
