--- a/HealthtimeJournal/AndroidManifest.xml
+++ b/HealthtimeJournal/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -38,7 +37,7 @@
         <activity
             android:name="com.healthtimejournal.RegisterPage2Activity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+        	android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.healthtimejournal.AddChildActivity"
@@ -54,6 +53,7 @@
             android:name="com.healthtimejournal.NewsFeedActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
+
         </activity>
         <activity
             android:name="com.healthtimejournal.PostActivity"
@@ -205,9 +205,11 @@
             android:label="@string/title_activity_profile_child"
             android:screenOrientation="portrait" >
         </activity>
+        
         <activity
-            android:name="com.healthtimejournal.ProfileParentActivity"
-            android:label="@string/title_activity_profile_parent" >
+            android:name="com.healthtimejournal.EventActivity"
+            android:label="@string/title_activity_event"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
